Added bootstrap and styles

--- a/templates/ice_cream/index.html.twig
+++ b/templates/ice_cream/index.html.twig
@@ -19,7 +19,7 @@
                 <th>Photo</th>
                 <th>Public</th>
                 <th>Creator</th>
-                <th>actions</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
