--- a/templates/review/index.html.twig
+++ b/templates/review/index.html.twig
@@ -17,7 +17,7 @@
                 <th>Stars</th>
                 <th>Public</th>
                 <th>Reviewed By</th>
-                <th>actions</th>
+                <th>Actions</th>
 
             </tr>
         </thead>
