--- a/templates/user/index.html.twig
+++ b/templates/user/index.html.twig
@@ -12,7 +12,7 @@
                 <th>Username</th>
                 <th>Password</th>
                 <th>Roles</th>
-                <th>actions</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
