--- a/templates/review/publicshow.html.twig
+++ b/templates/review/publicshow.html.twig
@@ -1,76 +1,41 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}IceCream{% endblock %}
+{% block title %}Review{% endblock %}
 
 {% block body %}
 
-    <h1>IceCream</h1>
+    <h1>Review</h1>
 
     <table>
         <tr>
             <th>Id</th>
-            <td>{{ iceCream.id }}</td>
-        </tr>
-        <tr>
-            <th>Name</th>
-            <td>{{ iceCream.name }}</td>
-        </tr>
-        <tr>
-            <th>Brand</th>
-            <td>{{ iceCream.brand }}</td>
-        </tr>
-        <tr>
-            <th>Flavour</th>
-            <td>{{ iceCream.flavour }}</td>
+            <td>{{ review.id }}</td>
         </tr>
         <tr>
             <th>Summary</th>
-            <td>{{ iceCream.summary }}</td>
+            <td>{{ review.summary }}</td>
+        </tr>
+        <tr>
+            <th>Date</th>
+            <td>{{ review.date ? review.date|date('Y-m-d') : '' }}</td>
+        </tr>
+        <tr>
+            <th>Shop</th>
+            <td>{{ review.shop }}</td>
         </tr>
         <tr>
             <th>Price</th>
-            <td>{{ iceCream.price }}</td>
+            <td>{{ review.price }}</td>
         </tr>
         <tr>
-            <th>Description</th>
-            <td>{{ iceCream.description }}</td>
-        </tr>
-        <tr>
-            <th>Ingredients</th>
-            <td>{{ iceCream.ingredients }}</td>
-        </tr>
-        <tr>
-            <th>Photo</th>
-            <td>{{ iceCream.photo }}</td>
+            <th>Stars</th>
+            <td>{{ review.stars }}</td>
         </tr>
         <tr>
             <th>Public</th>
-            <td>{{ iceCream.public ? 'Yes' : 'No' }}</td>
+            <td>{{ review.public ? 'Yes' : 'No' }}</td>
         </tr>
-
-        <tr>
-            <th>Creator</th>
-            <td>{{ iceCream.user.username }}</td>
-
-        </tr>
-
-        <tr>
-            <th>Review</th>
-            <td>
-
-                {% for review in reviews %}
-                    {% if iceCream.id == review.icecream.id %}
-                        <a href ="{{ url('') }}">Review</a>
-                    {% else %}
-                        No reviews found
-                    {% endif %}
-                {% endfor %}
-            </td>
-        </tr>
-
-
     </table>
-
-    <a href="{{ url('default') }}">Back to home</a>
+    <a href="{{ url('ice_cream_show_public', {'id': review.icecream.id}) }}">Back to ice-cream</a>
 
 {% endblock %}
