--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,6 +10,8 @@
         {% endblock %}
     </head>
         <body>
+
+
         <nav class="navbar navbar-expand-lg navbar-dark navbar-bg mb-5">
             <a style="margin-left: 75px;" class="navbar-brand space-brand" href="{{ url('default') }}">
                 Ice Cream Website
@@ -21,25 +23,56 @@
             </button>
             <div class="collapse navbar-collapse" id="navbarNavDropdown">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item">
-                        <a style="color: #fff;" class="nav-link" href="{{ url('user_index') }}">
-                            Users
-                        </a>
-                    </li>
-                    <li class="nav-item">
-                        <a style="color: #fff;" class="nav-link" href="{{ url('ice_cream_index') }}">
-                            Ice Cream
-                        </a>
-                    </li>
 
-                    <li class="nav-item">
-                        <a style="color: #fff;" class="nav-link" href="{{ url('review_index') }}">
-                            Reviews
-                        </a>
-                    </li>
+
+
+                    {% if is_granted('ROLE_ADMIN') %}
+                        <li class="nav-item">
+                            <a style="color: #fff;" class="nav-link" href="{{ url('user_index') }}">
+                                Users
+                            </a>
+                        </li>
+
+
+                        <li class="nav-item">
+                            <a style="color: #fff;" class="nav-link" href="{{ url('admin') }}">
+                                Admin Panel
+                            </a>
+                        </li>
+                    {% endif %}
+
+                    {% if is_granted('ROLE_USER') %}
+                        <li class="nav-item">
+                            <a style="color: #fff;" class="nav-link" href="{{ url('ice_cream_index') }}">
+                                Ice Cream
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a style="color: #fff;" class="nav-link" href="{{ url('review_index') }}">
+                                Reviews
+                            </a>
+                        </li>
+
+                        <li class="nav-item">
+                            <a style="color: #fff;" class="nav-link" href="{{ url('logout') }}">
+                                Logout
+                            </a>
+                        </li>
+                    {% else %}
+
+
+                        <li class="nav-item">
+                            <a style="color: #fff;" class="nav-link" href="{{ url('login') }}">
+                                Login
+                            </a>
+                        </li>
+                    {% endif %}
                 </ul>
             </div>
         </nav>
+
+
         <div class="container">
             <div class="row">
                 <div class="col-sm-12">
