--- a/templates/review/publicshow.html.twig
+++ b/templates/review/publicshow.html.twig
@@ -29,7 +29,7 @@
         </tr>
         <tr>
             <th>Stars</th>
-            <td>{{ review.stars }}</td>
+            <td><span class="rating-static rating-{{  review.stars }}"></span></td>
         </tr>
         <tr>
             <th>Public</th>
