--- a/templates/review/publicshow.html.twig
+++ b/templates/review/publicshow.html.twig
@@ -4,6 +4,10 @@
 
 {% block body %}
 
+    {% set totalRating = 0 %}
+    {% set counter = 0 %}
+    {% set overallRating = 0 %}
+
     <h1>Review</h1>
 
     <table>
