--- a/templates/ice_cream/publicshow.html.twig
+++ b/templates/ice_cream/publicshow.html.twig
@@ -3,7 +3,9 @@
 {% block title %}IceCream{% endblock %}
 
 {% block body %}
-
+    {% set totalRating = 0 %}
+    {% set counter = 0 %}
+    {% set overallRating = 0 %}
     <h1>IceCream</h1>
 
     <table>
@@ -62,6 +64,9 @@
 
                 {% for review in reviews %}
                     {% if iceCream.id == review.icecream.id %}
+                        {% set totalRating = totalRating + review.stars %}
+                        {% set counter = counter + 1 %}
+
                         <a href ="{{ url('review_show_public', {'id': review.id}) }}">Review</a>
                     {% endif %}
 
@@ -69,6 +74,17 @@
                 {% else %}
                     No reviews found
                 {% endfor %}
+            </td>
+        </tr>
+
+        <tr>
+            <th>Overall Rating</th>
+            <td>
+                {% if counter != 0 %}
+                    {% set overallReview = totalRating / counter %}
+                    <span class="rating-static rating-{{  overallReview|round(-1, 'ceil') }}"></span>
+                    {#{{ overallReview|round(-1, 'ceil') }}#}
+                {% endif %}
             </td>
         </tr>
     </table>
